--- a/index.ipynb
+++ b/index.ipynb
@@ -70,11 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = \"January\" # \"January\""
+    "travel_month = \"January\" # \"January\"\n",
+    "travel_month"
    ]
   },
   {
